# nn-inference-template

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  next.config.js  package-lock.json  package.json
.github/workflows/: build.yml  build_test_artifacts.yml  nextjs.yml
_posts/about-us/: fares.md  valentin.md
_posts/stories/: 00_header.md  adc-slides.md  adc-video.md  anira.md  nn-inference-template.md
assets/: CMakeLists.txt
assets/docs/: install_linux.md  install_mac.md  install_win.md
cmake/: SetupLibTorch.cmake  SetupOnnxRuntime.cmake  SetupTensorflowLite.cmake  install.cmake  msvc-support.cmake
minimal-inference/libtorch/: CMakeLists.txt  minimal-libtorch.cpp
minimal-inference/models/: model-tensorflow2.onnx  model.pt  model.tflite
minimal-inference/onnxruntime/: CMakeLists.txt  minimal-onnxruntime.cpp
minimal-inference/tensorflow-lite/: CMakeLists.txt  minimal-tflite.cpp
source/: ModelConfig.h  ModelPrePostProcessor.h  PluginEditor.cpp  PluginEditor.h  PluginParameters.cpp  PluginParameters.h  PluginProcessor.cpp  PluginProcessor.h
source/dsp/inference/: InferenceConfig.h  InferenceManager.cpp  InferenceManager.h  InferenceThread.cpp  InferenceThread.h
source/dsp/inference/backends/: LibtorchProcessor.cpp  LibtorchProcessor.h  OnnxRuntimeProcessor.cpp  OnnxRuntimeProcessor.h  TFLiteProcessor.cpp  TFLiteProcessor.h
source/dsp/inference/processors/: LibtorchProcessor.cpp  LibtorchProcessor.h  OnnxRuntimeProcessor.cpp  OnnxRuntimeProcessor.h  WindowingProcessor.cpp  WindowingProcessor.h
source/dsp/inference/utils/: InferenceConfig.h
source/dsp/utils/: MonoStereo.cpp  MonoStereo.h  RingBuffer.cpp  RingBuffer.h  ThreadSafeBuffer.cpp  ThreadSafeBuffer.h
source/ui/: BackendSelector.cpp  BackendSelector.h  CustomSliderLookAndFeel.h  DryWetSlider.cpp  DryWetSlider.h  config.h
src/app/: layout.tsx  page.tsx
src/app/_components/: about-us.tsx  alert.tsx  author-image.tsx  author-preview.tsx  cover-image-no-bg.tsx  cover-image.tsx  footer.tsx  header.tsx  hero-post.tsx  intro.tsx  more-stories.tsx  post-body.tsx  post-header.tsx  post-preview.tsx  section-separator.tsx  talk-description.tsx
src/app/posts/[slug]/: page.tsx
src/lib/: api.ts
test/: TestThread.h  benchmark.cpp  test.cpp
test/utils/: TestThread.h
utilities/: plotBenchmark.ipynb  requirements.txt
